--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
   "pulp>=2.3.1,<2.10",
   "pyyaml",
   "requests>=2.8.1,<3.0",
+  "referencing",
   "reretry",
   "smart-open>=4.0,<8.0",
   "snakemake-interface-executor-plugins>=9.3.2,<10.0",
